--- a/conf/kafka-connect/connect-splunk-standalone.properties
+++ b/conf/kafka-connect/connect-splunk-standalone.properties
@@ -36,31 +36,5 @@ status.storage.topic=__kafka-connect-splunk-statuses
 status.storage.replication.factor=3
 status.storage.partitions=5
 
-
-#ssl.key.password=
-#
-#ssl.keystore.type=JKS
-#ssl.keystore.location=
-#ssl.keystore.password=
-#
-#ssl.truststore.type=
-#ssl.truststore.password=
-#ssl.truststore.location=
-#
-#sasl.kerberos.service.name=
-#security.protocol=
-#
-#ssl.enabled.protocols=
-#ssl.protocol=TLS
-#ssl.provider=
-#
-#sasl.kerberos.kinit.cmd=
-#
-#
-#ssl.cipher.suites=
-#ssl.endpoint.identification.algorithm=
-#ssl.keymanager.algorithm=SunX509
-#ssl.trustmanager.algorithm=PKIX
-
-# rest.advertised.host.name=localhost
-# rest.host.name=localhost
+# Disable TLS validation
+splunk.hec.ssl.validate.certs=false
