--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -1,10 +1,9 @@
-user www-data;
+user nginx;
 worker_processes auto;
 pid /run/nginx.pid;
 
 events {
 	worker_connections 1024;
-	# multi_accept on;
 }
 
 http {
@@ -27,12 +26,15 @@ http {
 	##
 	# SSL Settings
 	##
-	ssl_protocols TLSv1.2 TLSv1.3;
-	ssl_prefer_server_ciphers on; 
-	ssl_dhparam /etc/nginx/dhparam.pem;
-
-	ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-SHA384;
+	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
 	ssl_ecdh_curve secp384r1; 
+	
+	
+	ssl_certificate /etc/nginx/ssl/nginx.crt;
+    ssl_certificate_key /etc/nginx/ssl/nginx.key;
+    ssl_dhparam /etc/nginx/ssl/dhparam.pem;	
 
 	ssl_session_timeout  10m;
 	ssl_session_cache shared:SSL:10m;
