--- a/conf/nginx/splunk_web.conf
+++ b/conf/nginx/splunk_web.conf
@@ -1,7 +1,8 @@
+################################## Splunk WebGUI ##################################
 server {
 	listen 80 default_server;
 	listen [::]:80 default_server;
-	server_name logging.hackinglab.network;
+	server_name _;
 	return 301 https://$host$request_uri;
 }
 
@@ -9,17 +10,24 @@ server {
     listen 443 http2 ssl;
     listen [::]:443 http2 ssl;
 
-    server_name logging.hackinglab.network;
-
-    ssl_certificate /etc/nginx/ssl/logging.crt;
-    ssl_certificate_key /etc/nginx/ssl/logging.key;
-    ssl_dhparam /etc/nginx/ssl/dhparam.pem;
-
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
+    server_name _;    
 
     location / {
         proxy_pass http://splunk:8000;
     }
+}
+
+################################## Splunk API ##################################
+upstream splunkrest {
+    server splunk:8089;
+}
+
+server {
+    server_name _;
+    listen 8089 ssl;
+
+    location /services {
+        proxy_pass https://splunkrest;
+    }
+
 }
