--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,34 @@
 version: '2.2'
 services: 
+  ############################################## NGINX ##############################################
+  nginx:
+    container_name: 'nginx'
+    restart: unless-stopped
+    build: 
+      context: .
+      dockerfile: docker/Dockerfile-nginx
+      args: 
+        NGINX_VERSION: ${NGINX_VERSION}
+    ports: 
+      - 80:80       # Splunk
+      - 443:443     # Splunk
+      - 8089:8089   # Splunk API
+      - 8083:8083   # connect
+      - 9021:9021   # control-center
+      #- 8082:8082  # rest-proxy
+      #- 8088:8088  # ksqldb-server
+    networks: 
+      - default
+      - splunk-backend
+      - kafka-backend
+    depends_on: 
+      - splunk
+      #- connect
+      #- control-center
+      #- rest-proxy
+      #- connect
+      #- ksqldb-server
+
   ############################################## Logstash ##############################################
   logstash:
     container_name: 'logstash'
@@ -7,52 +36,56 @@ services:
     build: 
       context: .
       dockerfile: docker/Dockerfile-logstash
+      args:
+        LOGSTASH_VERSION: ${LOGSTASH_VERSION}
     ports: 
       - 5044:5044/tcp
-      - 1514:1514/udp
-      - 1515:1515/tcp
     networks: 
       - default
       - logstash-backend
-      - splunk-prod_kafka-backend
-    cpus: 4
-    mem_limit: 2G
+      - splunk-backend
+    depends_on: 
+      - splunk
+      - broker
+    #cpus: 4
+    #mem_limit:2G
 
   ############################################## Zookeeper ##############################################
   zookeeper:
-    image: confluentinc/cp-zookeeper:5.5.0
+    image: confluentinc/cp-zookeeper:${CONFLUENT_VERSION}
     restart: unless-stopped
     container_name: zookeeper
+    depends_on: 
+      - splunk
     networks: 
       - kafka-backend
-      - splunk-prod_kafka-backend
-    ports:
-      - "2181:2181"
+      - splunk-backend
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
     volumes: 
       - zk-data:/var/lib/zookeeper/data
       - zk-logs:/var/lib/zookeeper/log
-    cpus: 1
-    mem_limit: 150M 
+    #cpus: 1
+    #mem_limit:150M 
 
   ############################################## Kafka ##############################################
   broker:
-    image: confluentinc/cp-kafka:5.5.0
+    image: confluentinc/cp-kafka:${CONFLUENT_VERSION}
     restart: unless-stopped
     container_name: broker
     depends_on:
       - zookeeper
+      - splunk
     networks: 
       - default
       - kafka-backend
-      - splunk-prod_kafka-backend
+      - splunk-backend
     volumes: 
       - kafka-data:/var/lib/kafka/data
       - kafka-logs:/var/lib/kafka/logs
     ports:
-      - "9092:9092"
+      - 9092:9092
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
@@ -65,19 +98,19 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
        # Only log errors to output
-      KAFKA_LOG4J_ROOT_LOGLEVEL: ERROR
+      KAFKA_LOG4J_ROOT_LOGLEVEL: ${ROOT_LOGLEVEL}
       # Enable log cleaner
       KAFKA_LOG_CLEANER_ENABLE: 'true'
       # Keep logs for 72 hours  (3 days)
       KAFKA_LOG_RETENTION_HOURS: 72
       # Keep up to 100 gigabytes of logs
       KAFKA_LOG_RETENTION_BYTES: 100000000000
-    cpus: 4
-    mem_limit: 2G 
+    #cpus: 4
+    #mem_limit:2G 
     
   ############################################## Schema registry ##############################################
   schema-registry:
-    image: confluentinc/cp-schema-registry:5.5.0
+    image: confluentinc/cp-schema-registry:${CONFLUENT_VERSION}
     restart: unless-stopped
     container_name: schema-registry
     depends_on:
@@ -85,30 +118,30 @@ services:
       - broker
     networks: 
       - kafka-backend
-      - splunk-prod_kafka-backend
+      - splunk-backend
     environment:
       SCHEMA_REGISTRY_HOST_NAME: schema-registry
       SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: 'zookeeper:2181'
-    cpus: 1
-    mem_limit: 150M 
+    #cpus: 1
+    #mem_limit:300M 
 
   ############################################## Connect ##############################################
   connect:
     build: 
       context: .
-      dockerfile: docker/Docker-kafka-connect
+      dockerfile: docker/Dockerfile-kafka-connect
+      args:
+        CONFLUENT_VERSION: ${CONFLUENT_VERSION}
     restart: unless-stopped
     container_name: connect
     depends_on:
       - zookeeper
       - broker
       - schema-registry
+      - splunk
     networks: 
-      - default
       - kafka-backend
-      - splunk-prod_kafka-backend
-    ports:
-      - "8083:8083"
+      - splunk-backend
     environment:
       CONNECT_BOOTSTRAP_SERVERS: 'broker:29092'
       CONNECT_REST_ADVERTISED_HOST_NAME: connect
@@ -129,12 +162,12 @@ services:
       CONNECT_ZOOKEEPER_CONNECT: 'zookeeper:2181'
       CONNECT_PLUGIN_PATH: "/usr/share/java,/usr/share/confluent-hub-components"
       CONNECT_LOG4J_LOGGERS: org.apache.zookeeper=ERROR,org.I0Itec.zkclient=ERROR,org.reflections=ERROR
-    # cpus: 2
-    # mem_limit: 1500M 
+    #cpus: 2
+    #mem_limit:2G 
 
   ############################################## Kafka Control center ##############################################
   control-center:
-    image: confluentinc/cp-enterprise-control-center:5.5.0
+    image: confluentinc/cp-enterprise-control-center:${CONFLUENT_VERSION}
     restart: unless-stopped
     container_name: control-center
     depends_on:
@@ -144,11 +177,8 @@ services:
       - connect
       - ksqldb-server
     networks: 
-      - default
       - kafka-backend
-      - splunk-prod_kafka-backend
-    ports:
-      - "9021:9021"
+      - splunk-backend
     environment:
       CONTROL_CENTER_BOOTSTRAP_SERVERS: 'broker:29092'
       CONTROL_CENTER_ZOOKEEPER_CONNECT: 'zookeeper:2181'
@@ -160,14 +190,14 @@ services:
       CONTROL_CENTER_INTERNAL_TOPICS_PARTITIONS: 1
       CONTROL_CENTER_MONITORING_INTERCEPTOR_TOPIC_PARTITIONS: 1
       CONFLUENT_METRICS_TOPIC_REPLICATION: 1
-      CONTROL_CENTER_LOG4J_ROOT_LOGLEVEL: ERROR
+      CONTROL_CENTER_LOG4J_ROOT_LOGLEVEL: ${ROOT_LOGLEVEL}
       PORT: 9021
-    cpus: 1
-    mem_limit: 500M
+    #cpus: 1
+    #mem_limit:500M
 
   ############################################## KsqlDB ##############################################
   ksqldb-server:
-    image: confluentinc/cp-ksqldb-server:5.5.0
+    image: confluentinc/cp-ksqldb-server:${CONFLUENT_VERSION}
     restart: unless-stopped
     container_name: ksqldb-server
     depends_on:
@@ -176,9 +206,9 @@ services:
     networks: 
       - default
       - kafka-backend
-      - splunk-prod_kafka-backend
+      - splunk-backend
     ports:
-      - "8088:8088"
+      - 8088:8088
     environment:
       KSQL_CONFIG_DIR: "/etc/ksql"
       KSQL_BOOTSTRAP_SERVERS: "broker:29092"
@@ -189,30 +219,30 @@ services:
       KSQL_PRODUCER_INTERCEPTOR_CLASSES: "io.confluent.monitoring.clients.interceptor.MonitoringProducerInterceptor"
       KSQL_CONSUMER_INTERCEPTOR_CLASSES: "io.confluent.monitoring.clients.interceptor.MonitoringConsumerInterceptor"
       KSQL_KSQL_CONNECT_URL: "http://connect:8083"
-      KSQL_LOG4J_ROOT_LOGLEVEL: ERROR
-    cpus: 1
-    mem_limit: 500M 
+      KSQL_LOG4J_ROOT_LOGLEVEL: ${ROOT_LOGLEVEL}
+    #cpus: 1
+    #mem_limit:500M 
 
   ############################################## KsqlDB client ##############################################
   ksqldb-cli:
-    image: confluentinc/cp-ksqldb-cli:5.5.0
+    image: confluentinc/cp-ksqldb-cli:${CONFLUENT_VERSION}
     restart: unless-stopped
     container_name: ksqldb-cli
     networks: 
       - kafka-backend
-      - splunk-prod_kafka-backend
+      - splunk-backend
     depends_on:
       - broker
       - connect
       - ksqldb-server
     entrypoint: /bin/sh
     tty: true
-    cpus: 1
-    mem_limit: 100M
+    #cpus: 1
+    #mem_limit:100M
 
   ############################################## Kafka Rest proxy ##############################################
   rest-proxy:
-    image: confluentinc/cp-kafka-rest:5.5.0
+    image: confluentinc/cp-kafka-rest:${CONFLUENT_VERSION}
     restart: unless-stopped
     container_name: rest-proxy
     depends_on:
@@ -222,7 +252,7 @@ services:
     networks: 
       - default
       - kafka-backend
-      - splunk-prod_kafka-backend
+      - splunk-backend
     ports:
       - 8082:8082
     environment:
@@ -230,29 +260,28 @@ services:
       KAFKA_REST_BOOTSTRAP_SERVERS: 'broker:29092'
       KAFKA_REST_LISTENERS: "http://0.0.0.0:8082"
       KAFKA_REST_SCHEMA_REGISTRY_URL: 'http://schema-registry:8081'
-    cpus: 2
-    mem_limit: 500M 
+    #cpus: 2
+    #mem_limit:500M 
 
   ############################################## Splunk ##############################################
   splunk:
-    image: splunk/splunk:8.0-debian
+    build: 
+      context: .
+      dockerfile: docker/Dockerfile-splunk
+      args:
+        SPLUNK_VERSION: ${SPLUNK_VERSION}
     restart: unless-stopped
     container_name: splunk
     networks:
-      - default
       - splunk-backend
-    ports:
-      - 8000:8000/tcp
-      - 8090:8090/tcp
-      - 8091:8091/tcp
     environment:
-      - SPLUNK_START_ARGS=--accept-license
+      - SPLUNK_START_ARGS=--accept-license 
       - SPLUNK_PASSWORD=changeme
     volumes: 
       - splunk-var:/opt/splunk/var
       - splunk-etc:/opt/splunk/etc
-    cpus: 2
-    mem_limit: 1G
+    #cpus: 2
+    #mem_limit:1G
 
 volumes: 
   kafka-data:
