--- a/docker/Dockerfile-logstash
+++ b/docker/Dockerfile-logstash
@@ -1,10 +1,11 @@
-FROM logstash:7.6.2
+ARG LOGSTASH_VERSION
+FROM logstash:${LOGSTASH_VERSION}
 
 # Install plugins
 RUN /usr/share/logstash/bin/logstash-plugin install logstash-input-relp
 
 # Copy certs
-RUN mkdir /usr/share/logstash/ssl
+#RUN mkdir /usr/share/logstash/ssl
 COPY conf/logstash/ssl/logstash.crt /usr/share/logstash/ssl/logstash.crt
 COPY conf/logstash/ssl/logstash.key /usr/share/logstash/ssl/logstash.key
 
@@ -14,4 +15,3 @@ COPY conf/logstash/logstash.yml /usr/share/logstash/config/logstash.yml
 
 # Copy pipeline configs
 COPY conf/logstash/pipeline/ /usr/share/logstash/pipeline
-
