--- a/docker-compose-splunk.yml
+++ b/docker-compose-splunk.yml
@@ -1,37 +1,27 @@
 version: '2.2'
 services:
-  # nginx:
-  #   build: 
-  #     context: .
-  #     dockerfile: 
-  #   container_name: 'splunk-nginx'
-  #   restart: unless-stopped
-  #   networks: 
-  #     - default
-  #     - splunk-backend
-  #   ports:
-  #     - 8000:80
-  #     - 8443:443
-  #     - 8091:8091
+  ############################################## Splunk ##############################################
   splunk:
-    image: splunk/splunk:8.0-debian
+    build: 
+      context: .
+      dockerfile: docker/Dockerfile-splunk
+      args:
+        SPLUNK_VERSION: ${SPLUNK_VERSION}
     restart: unless-stopped
     container_name: splunk
     networks:
       - default
       - splunk-backend
     ports:
-      - 8000:8000/tcp
-      - 8090:8090/tcp
-      - 8091:8091/tcp
+      - 8000:8000
     environment:
-      - SPLUNK_START_ARGS=--accept-license
-      - SPLUNK_PASSWORD=changeme
+      - SPLUNK_START_ARGS="--accept-license"
+      - SPLUNK_PASSWORD=Changeme123!
     volumes: 
       - splunk-var:/opt/splunk/var
       - splunk-etc:/opt/splunk/etc
-    cpus: 2
-    mem_limit: 1G
+    cpus: 8
+    mem_limit: 12G
 
 volumes: 
   splunk-var:
