--- a/docker-compose-kafka.yml
+++ b/docker-compose-kafka.yml
@@ -2,14 +2,14 @@ version: '2.2'
 services:
   ############################################## Zookeeper ##############################################
   zookeeper:
-    image: confluentinc/cp-zookeeper:5.5.0
+    image: confluentinc/cp-zookeeper:${CONFLUENT_VERSION}
     restart: unless-stopped
     container_name: zookeeper
+    depends_on: 
+      - splunk
     networks: 
       - kafka-backend
-      - splunk-prod_kafka-backend
-    ports:
-      - "2181:2181"
+      - splunk-backend
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
@@ -21,20 +21,21 @@ services:
 
   ############################################## Kafka ##############################################
   broker:
-    image: confluentinc/cp-kafka:5.5.0
+    image: confluentinc/cp-kafka:${CONFLUENT_VERSION}
     restart: unless-stopped
     container_name: broker
     depends_on:
       - zookeeper
+      - splunk
     networks: 
       - default
       - kafka-backend
-      - splunk-prod_kafka-backend
+      - splunk-backend
     volumes: 
       - kafka-data:/var/lib/kafka/data
       - kafka-logs:/var/lib/kafka/logs
     ports:
-      - "9092:9092"
+      - 9092:9092
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
@@ -46,8 +47,8 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-       # Only log errors to output
-      KAFKA_LOG4J_ROOT_LOGLEVEL: ERROR
+      # Only log errors to output
+      KAFKA_LOG4J_ROOT_LOGLEVEL: ${ROOT_LOGLEVEL}
       # Enable log cleaner
       KAFKA_LOG_CLEANER_ENABLE: 'true'
       # Keep logs for 72 hours  (3 days)
@@ -59,7 +60,7 @@ services:
     
   ############################################## Schema registry ##############################################
   schema-registry:
-    image: confluentinc/cp-schema-registry:5.5.0
+    image: confluentinc/cp-schema-registry:${CONFLUENT_VERSION}
     restart: unless-stopped
     container_name: schema-registry
     depends_on:
@@ -67,30 +68,33 @@ services:
       - broker
     networks: 
       - kafka-backend
-      - splunk-prod_kafka-backend
+      - splunk-backend
     environment:
       SCHEMA_REGISTRY_HOST_NAME: schema-registry
       SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: 'zookeeper:2181'
+      SCHEMA_REGISTRY_LOG4J_ROOT_LOGLEVEL: ${ROOT_LOGLEVEL}
     cpus: 1
-    mem_limit: 150M 
+    mem_limit: 500M 
 
   ############################################## Connect ##############################################
   connect:
     build: 
       context: .
-      dockerfile: docker/Docker-kafka-connect
+      dockerfile: docker/Dockerfile-kafka-connect
+      args:
+        CONFLUENT_VERSION: ${CONFLUENT_VERSION}
     restart: unless-stopped
     container_name: connect
     depends_on:
       - zookeeper
       - broker
       - schema-registry
-    networks: 
-      - default
-      - kafka-backend
-      - splunk-prod_kafka-backend
+      - splunk
     ports:
-      - "8083:8083"
+      - 8083:8083
+    networks: 
+      - kafka-backend
+      - splunk-backend
     environment:
       CONNECT_BOOTSTRAP_SERVERS: 'broker:29092'
       CONNECT_REST_ADVERTISED_HOST_NAME: connect
@@ -111,12 +115,13 @@ services:
       CONNECT_ZOOKEEPER_CONNECT: 'zookeeper:2181'
       CONNECT_PLUGIN_PATH: "/usr/share/java,/usr/share/confluent-hub-components"
       CONNECT_LOG4J_LOGGERS: org.apache.zookeeper=ERROR,org.I0Itec.zkclient=ERROR,org.reflections=ERROR
-    # cpus: 2
-    # mem_limit: 1500M 
+      CONNECT_LOG4J_ROOT_LOGLEVEL: ${ROOT_LOGLEVEL}
+    cpus: 2
+    mem_limit: 2500M 
 
   ############################################## Kafka Control center ##############################################
   control-center:
-    image: confluentinc/cp-enterprise-control-center:5.5.0
+    image: confluentinc/cp-enterprise-control-center:${CONFLUENT_VERSION}
     restart: unless-stopped
     container_name: control-center
     depends_on:
@@ -125,12 +130,11 @@ services:
       - schema-registry
       - connect
       - ksqldb-server
-    networks: 
-      - default
-      - kafka-backend
-      - splunk-prod_kafka-backend
     ports:
-      - "9021:9021"
+      - 9021:9021
+    networks: 
+      - kafka-backend
+      - splunk-backend
     environment:
       CONTROL_CENTER_BOOTSTRAP_SERVERS: 'broker:29092'
       CONTROL_CENTER_ZOOKEEPER_CONNECT: 'zookeeper:2181'
@@ -142,14 +146,14 @@ services:
       CONTROL_CENTER_INTERNAL_TOPICS_PARTITIONS: 1
       CONTROL_CENTER_MONITORING_INTERCEPTOR_TOPIC_PARTITIONS: 1
       CONFLUENT_METRICS_TOPIC_REPLICATION: 1
-      CONTROL_CENTER_LOG4J_ROOT_LOGLEVEL: ERROR
+      CONTROL_CENTER_LOG4J_ROOT_LOGLEVEL: ${ROOT_LOGLEVEL}
       PORT: 9021
     cpus: 1
-    mem_limit: 500M
+    mem_limit: 1G
 
   ############################################## KsqlDB ##############################################
   ksqldb-server:
-    image: confluentinc/cp-ksqldb-server:5.5.0
+    image: confluentinc/cp-ksqldb-server:${CONFLUENT_VERSION}
     restart: unless-stopped
     container_name: ksqldb-server
     depends_on:
@@ -158,9 +162,9 @@ services:
     networks: 
       - default
       - kafka-backend
-      - splunk-prod_kafka-backend
+      - splunk-backend
     ports:
-      - "8088:8088"
+      - 8088:8088
     environment:
       KSQL_CONFIG_DIR: "/etc/ksql"
       KSQL_BOOTSTRAP_SERVERS: "broker:29092"
@@ -171,18 +175,18 @@ services:
       KSQL_PRODUCER_INTERCEPTOR_CLASSES: "io.confluent.monitoring.clients.interceptor.MonitoringProducerInterceptor"
       KSQL_CONSUMER_INTERCEPTOR_CLASSES: "io.confluent.monitoring.clients.interceptor.MonitoringConsumerInterceptor"
       KSQL_KSQL_CONNECT_URL: "http://connect:8083"
-      KSQL_LOG4J_ROOT_LOGLEVEL: ERROR
+      KSQL_LOG4J_ROOT_LOGLEVEL: ${ROOT_LOGLEVEL}
     cpus: 1
     mem_limit: 500M 
 
   ############################################## KsqlDB client ##############################################
   ksqldb-cli:
-    image: confluentinc/cp-ksqldb-cli:5.5.0
+    image: confluentinc/cp-ksqldb-cli:${CONFLUENT_VERSION}
     restart: unless-stopped
     container_name: ksqldb-cli
     networks: 
       - kafka-backend
-      - splunk-prod_kafka-backend
+      - splunk-backend
     depends_on:
       - broker
       - connect
@@ -194,7 +198,7 @@ services:
 
   ############################################## Kafka Rest proxy ##############################################
   rest-proxy:
-    image: confluentinc/cp-kafka-rest:5.5.0
+    image: confluentinc/cp-kafka-rest:${CONFLUENT_VERSION}
     restart: unless-stopped
     container_name: rest-proxy
     depends_on:
@@ -204,7 +208,7 @@ services:
     networks: 
       - default
       - kafka-backend
-      - splunk-prod_kafka-backend
+      - splunk-backend
     ports:
       - 8082:8082
     environment:
@@ -213,13 +217,15 @@ services:
       KAFKA_REST_LISTENERS: "http://0.0.0.0:8082"
       KAFKA_REST_SCHEMA_REGISTRY_URL: 'http://schema-registry:8081'
     cpus: 2
-    mem_limit: 500M 
+    mem_limit: 300M 
 
 volumes: 
   kafka-data:
   kafka-logs:
   zk-data:
   zk-logs:
+  splunk-var:
+  splunk-etc:
 
 networks: 
   kafka-backend:
