--- a/docker/Dockerfile-kafka-connect
+++ b/docker/Dockerfile-kafka-connect
@@ -1,8 +1,11 @@
 ARG CONFLUENT_VERSION
 FROM confluentinc/cp-kafka-connect:${CONFLUENT_VERSION}
 
+ARG KAFKA_CONNECT_SPLUNK
+
 # Install Kafka connector for Splunk
-RUN confluent-hub install --no-prompt splunk/kafka-connect-splunk:1.2.0
+RUN echo $HELLO && echo ${HELLO}
+RUN confluent-hub install --no-prompt splunk/kafka-connect-splunk:${KAFKA_CONNECT_SPLUNK}
 
 # Copy Splunk config
 COPY conf/kafka-connect/connect-splunk-standalone.properties /usr/share/confluent-hub-components/splunk-kafka-connect-splunk/etc/connect-distributed.properties
