--- a/docker/Dockerfile-splunk
+++ b/docker/Dockerfile-splunk
@@ -3,3 +3,6 @@ FROM splunk/splunk:${SPLUNK_VERSION}
 
 # Config HEC input
 COPY conf/splunk/inputs.conf /opt/splunk/etc/apps/splunk_httpinput/default/inputs.conf
+
+# Copy defualts
+COPY conf/splunk/default.yml /opt/splunk/etc/system/local/default.yml
