--- a/docker-compose-splunk.yml
+++ b/docker-compose-splunk.yml
@@ -2,11 +2,12 @@ version: '2.2'
 services:
   ############################################## Splunk ##############################################
   splunk:
+    #image: splunk/splunk:latest
     build: 
-      context: .
-      dockerfile: docker/Dockerfile-splunk
-      args:
-        SPLUNK_VERSION: ${SPLUNK_VERSION}
+     context: .
+     dockerfile: docker/Dockerfile-splunk
+     args:
+       SPLUNK_VERSION: ${SPLUNK_VERSION}
     restart: unless-stopped
     container_name: splunk
     networks:
@@ -16,16 +17,19 @@ services:
       - 8000:8000
     environment:
       - SPLUNK_START_ARGS="--accept-license"
-      - SPLUNK_PASSWORD=Changeme123!
+      - SPLUNK_PASSWORD
+      #- SPLUNK_PASSWORD=Changeme123!
     volumes: 
       - splunk-var:/opt/splunk/var
       - splunk-etc:/opt/splunk/etc
+      - splunk-tmp:/tmp/defaults
     cpus: 8
     mem_limit: 12G
 
 volumes: 
   splunk-var:
   splunk-etc:
+  splunk-tmp:
 
 networks: 
   splunk-backend:
