--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2.2'
+version: "2.2"
 services: 
   ############################################## NGINX ##############################################
   nginx:
@@ -28,8 +28,8 @@ services:
       #- rest-proxy
       #- connect
       #- ksqldb-server
-    cpus: 1
-    mem_limit: 100M
+    # cpus: 1
+    # mem_limit: 100M
 
   ############################################## Logstash ##############################################
   logstash:
@@ -49,8 +49,8 @@ services:
     depends_on: 
       - splunk
       - broker
-    cpus: 4
-    mem_limit: 2G
+    # cpus: 4
+    # mem_limit: 2G
 
   ############################################## Zookeeper ##############################################
   zookeeper:
@@ -68,8 +68,8 @@ services:
     volumes: 
       - zk-data:/var/lib/zookeeper/data
       - zk-logs:/var/lib/zookeeper/log
-    cpus: 1
-    mem_limit: 150M 
+    # cpus: 1
+    # mem_limit: 150M 
 
   ############################################## Kafka ##############################################
   broker:
@@ -107,8 +107,8 @@ services:
       KAFKA_LOG_RETENTION_HOURS: 72
       # Keep up to 100 gigabytes of logs
       KAFKA_LOG_RETENTION_BYTES: 100000000000
-    cpus: 4
-    mem_limit: 2G 
+    # cpus: 4
+    # mem_limit: 2G 
     
   ############################################## Schema registry ##############################################
   schema-registry:
@@ -125,8 +125,8 @@ services:
       SCHEMA_REGISTRY_HOST_NAME: schema-registry
       SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: 'zookeeper:2181'
       SCHEMA_REGISTRY_LOG4J_ROOT_LOGLEVEL: ${ROOT_LOGLEVEL}
-    cpus: 1
-    mem_limit: 500M 
+    # cpus: 1
+    # mem_limit: 500M 
 
   ############################################## Connect ##############################################
   connect:
@@ -167,8 +167,8 @@ services:
       CONNECT_PLUGIN_PATH: "/usr/share/java,/usr/share/confluent-hub-components"
       CONNECT_LOG4J_LOGGERS: org.apache.zookeeper=ERROR,org.I0Itec.zkclient=ERROR,org.reflections=ERROR
       CONNECT_LOG4J_ROOT_LOGLEVEL: ${ROOT_LOGLEVEL}
-    cpus: 2
-    mem_limit: 2500M 
+    # cpus: 2
+    # mem_limit: 2500M 
 
   ############################################## Kafka Control center ##############################################
   control-center:
@@ -197,8 +197,8 @@ services:
       CONFLUENT_METRICS_TOPIC_REPLICATION: 1
       CONTROL_CENTER_LOG4J_ROOT_LOGLEVEL: ${ROOT_LOGLEVEL}
       PORT: 9021
-    cpus: 1
-    mem_limit: 1G
+    # cpus: 1
+    # mem_limit: 1G
 
   ############################################## KsqlDB ##############################################
   ksqldb-server:
@@ -225,8 +225,8 @@ services:
       KSQL_CONSUMER_INTERCEPTOR_CLASSES: "io.confluent.monitoring.clients.interceptor.MonitoringConsumerInterceptor"
       KSQL_KSQL_CONNECT_URL: "http://connect:8083"
       KSQL_LOG4J_ROOT_LOGLEVEL: ${ROOT_LOGLEVEL}
-    cpus: 1
-    mem_limit: 500M 
+    # cpus: 1
+    # mem_limit: 500M 
 
   ############################################## KsqlDB client ##############################################
   ksqldb-cli:
@@ -242,8 +242,8 @@ services:
       - ksqldb-server
     entrypoint: /bin/sh
     tty: true
-    cpus: 1
-    mem_limit: 100M
+    # cpus: 1
+    # mem_limit: 100M
 
   ############################################## Kafka Rest proxy ##############################################
   rest-proxy:
@@ -265,8 +265,8 @@ services:
       KAFKA_REST_BOOTSTRAP_SERVERS: 'broker:29092'
       KAFKA_REST_LISTENERS: "http://0.0.0.0:8082"
       KAFKA_REST_SCHEMA_REGISTRY_URL: 'http://schema-registry:8081'
-    cpus: 2
-    mem_limit: 300M 
+    # cpus: 2
+    # mem_limit: 300M 
 
   ############################################## Splunk ##############################################
   splunk:
@@ -281,12 +281,13 @@ services:
       - splunk-backend
     environment:
       - SPLUNK_START_ARGS="--accept-license"
-      - SPLUNK_PASSWORD=Changeme123!
+      #- SPLUNK_PASSWORD=Changeme123!
     volumes: 
       - splunk-var:/opt/splunk/var
       - splunk-etc:/opt/splunk/etc
-    cpus: 8
-    mem_limit: 12G
+      - splunk-tmp:/tmp/defaults
+    # cpus: 8
+    # mem_limit: 12G
 
 volumes: 
   kafka-data:
@@ -295,6 +296,7 @@ volumes:
   zk-logs:
   splunk-var:
   splunk-etc:
+  splunk-tmp:
 
 networks: 
   logstash-backend:
