--- a/docker/Dockerfile-splunk
+++ b/docker/Dockerfile-splunk
@@ -5,4 +5,5 @@ FROM splunk/splunk:${SPLUNK_VERSION}
 COPY conf/splunk/inputs.conf /opt/splunk/etc/apps/splunk_httpinput/default/inputs.conf
 
 # Copy defualts
-COPY conf/splunk/default.yml /opt/splunk/etc/system/local/default.yml
+#COPY conf/splunk/default.yml /opt/splunk/etc/system/local/default.yml
+COPY conf/splunk/default.yml /tmp/defaults/default.yml
