--- a/conf/nginx/confluence_kafka_broker.conf
+++ b/conf/nginx/confluence_kafka_broker.conf
@@ -1,21 +1,3 @@
-############################################################################################
-# Kafka brokers
-############################################################################################
-# stream {
-#     # Define kafka nodes
-#     stream stream_backend {
-#       #least_conn;
-#       server broker:9092;
-#     }
-
-#     # Reverse proxy for Kafka
-#     server {
-#       listen 9092;
-#       proxy_pass stream_backend;
-#     }
-# }
-
-
 ################################## control-center ##################################
 upstream control-center-backend {
     server control-center:9021;
@@ -41,5 +23,33 @@ server {
 
     location / {
         proxy_pass http://connect-backend;
+    }
+}
+
+################################## Kafka Rest proxy ##################################
+upstream rest-proxy-backend {
+    server rest-proxy:8082;
+}
+
+server {
+    server_name _;
+    listen 8082 ssl;
+
+    location / {
+        proxy_pass http://rest-proxy-backend;
+    }
+}
+
+################################## KsqlDB ##################################
+upstream ksqldb-backend {
+    server ksqldb-server:8088;
+}
+
+server {
+    server_name _;
+    listen 8088 ssl;
+
+    location / {
+        proxy_pass http://ksqldb-backend;
     }
 }
