Added NGINX configs for Splunk on host, updated docker-composes, updated docs

--- a/conf/nginx/confluence_kafka_broker.conf
+++ b/conf/nginx/confluence_kafka_broker.conf
@@ -1,55 +1,39 @@
 ################################## control-center ##################################
-upstream control-center-backend {
-    server control-center:9021;
-}
-
 server {
     server_name _;
     listen 9021 ssl;
 
     location / {
-        proxy_pass http://control-center-backend;
+        proxy_pass http://control-center:9021;
     }
 }
 
 ################################## connect ##################################
-upstream connect-backend {
-    server connect:8083;
-}
-
 server {
     server_name _;
     listen 8083 ssl;
 
     location / {
-        proxy_pass http://connect-backend;
+        proxy_pass http://connect:8083;
     }
 }
 
 ################################## Kafka Rest proxy ##################################
-upstream rest-proxy-backend {
-    server rest-proxy:8082;
-}
-
 server {
     server_name _;
     listen 8082 ssl;
 
     location / {
-        proxy_pass http://rest-proxy-backend;
+        proxy_pass http://rest-proxy:8082;
     }
 }
 
 ################################## KsqlDB ##################################
-upstream ksqldb-backend {
-    server ksqldb-server:8088;
-}
-
 server {
     server_name _;
     listen 8088 ssl;
 
     location / {
-        proxy_pass http://ksqldb-backend;
+        proxy_pass http://ksqldb-server:8088;
     }
 }
