--- a/conf/nginx/splunk_host_api.conf
+++ b/conf/nginx/splunk_host_api.conf
@@ -9,6 +9,7 @@ upstream splunkrest {
 
 server {
     listen 192.168.34.80:8089 ssl;
+    listen 172.17.0.1:8090 ssl;
 
     server_name _;
 
@@ -23,6 +24,6 @@ server {
   	    proxy_set_header Connection "";
 
 	    # Proxy requests to HEC
-        proxy_pass http://splunkrest;
+        proxy_pass https://splunkrest;
     }
 }
