--- a/conf/nginx/splunk_host_hec_input.conf
+++ b/conf/nginx/splunk_host_hec_input.conf
@@ -14,6 +14,7 @@ upstream hec {
 
 server {
     listen 192.168.34.80:8090 ssl;
+    listen 172.17.0.1:8090 ssl;
 
     server_name _;
 
@@ -28,6 +29,6 @@ server {
   	    proxy_set_header Connection "";
 
 	    # Proxy requests to HEC
-        proxy_pass http://hec/services/collector;
+        proxy_pass https://hec;
     }
 }
