--- a/docker-compose-kafka.yml
+++ b/docker-compose-kafka.yml
@@ -1,5 +1,32 @@
 version: '2.2'
 services:
+  ############################################## NGINX ##############################################
+  nginx:
+    container_name: 'nginx'
+    restart: unless-stopped
+    build: 
+      context: .
+      dockerfile: docker/Dockerfile-nginx
+      args: 
+        NGINX_VERSION: ${NGINX_VERSION}
+    ports: 
+      - 8083:8083  # connect
+      - 9021:9021  # control-center
+      - 8082:8082  # rest-proxy
+      - 8088:8088  # ksqldb-server
+    networks: 
+      - default
+      - splunk-backend
+      - kafka-backend
+    depends_on: 
+      - splunk
+      - connect
+      - control-center
+      - rest-proxy
+      - ksqldb-server
+    cpus: 1
+    mem_limit: 100M
+
   ############################################## Zookeeper ##############################################
   zookeeper:
     image: confluentinc/cp-zookeeper:${CONFLUENT_VERSION}
@@ -9,7 +36,6 @@ services:
       - splunk
     networks: 
       - kafka-backend
-      - splunk-backend
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
@@ -68,7 +94,6 @@ services:
       - broker
     networks: 
       - kafka-backend
-      - splunk-backend
     environment:
       SCHEMA_REGISTRY_HOST_NAME: schema-registry
       SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: 'zookeeper:2181'
@@ -83,6 +108,7 @@ services:
       dockerfile: docker/Dockerfile-kafka-connect
       args:
         CONFLUENT_VERSION: ${CONFLUENT_VERSION}
+        KAFKA_CONNECT_SPLUNK: ${KAFKA_CONNECT_SPLUNK}
     restart: unless-stopped
     container_name: connect
     depends_on:
@@ -90,8 +116,6 @@ services:
       - broker
       - schema-registry
       - splunk
-    ports:
-      - 8083:8083
     networks: 
       - kafka-backend
       - splunk-backend
@@ -130,8 +154,6 @@ services:
       - schema-registry
       - connect
       - ksqldb-server
-    ports:
-      - 9021:9021
     networks: 
       - kafka-backend
       - splunk-backend
@@ -160,11 +182,7 @@ services:
       - broker
       - connect
     networks: 
-      - default
       - kafka-backend
-      - splunk-backend
-    ports:
-      - 8088:8088
     environment:
       KSQL_CONFIG_DIR: "/etc/ksql"
       KSQL_BOOTSTRAP_SERVERS: "broker:29092"
@@ -186,7 +204,6 @@ services:
     container_name: ksqldb-cli
     networks: 
       - kafka-backend
-      - splunk-backend
     depends_on:
       - broker
       - connect
@@ -206,11 +223,7 @@ services:
       - broker
       - schema-registry
     networks: 
-      - default
       - kafka-backend
-      - splunk-backend
-    ports:
-      - 8082:8082
     environment:
       KAFKA_REST_HOST_NAME: rest-proxy
       KAFKA_REST_BOOTSTRAP_SERVERS: 'broker:29092'
